@@ -4,28 +4,42 @@ An Adaptive and Distributed Architecture for Cloud and MapReduce Algorithms and 
 
 Cloud2Sim proposes a distributed concurrent architecture to CloudSim simulations.
 
-## Building Cloud2Sim
+## Building and Running Cloud2Sim
 
-To build Cloud2Sim from source using Maven:
+The easiest way to build and run the simulation is using the automated setup script.
+
+### 1. Setup and Build
+Run the setup script from the project root. This will compile the project with Maven and generate a `run_sim.sh` wrapper that handles all Java version-specific settings (like `--add-opens` for modern JDKs).
 
 ```bash
-mvn clean install
+./setup.sh
 ```
 
-To skip tests during the build:
+### 2. Running Simulations
+Use the generated `run_sim.sh` script to launch any simulation class. The script automatically manages the classpath and JVM arguments.
 
+**Static Simulation:**
 ```bash
-mvn clean install -DskipTests
+./run_sim.sh pt.inesc_id.gsd.cloud2sim.applications.main.statics.Simulator
 ```
 
-The built distribution can be found in `distribution/target/`.
-
-## Running Simulations
-
-To run an existing simulation example:
-
+**Adaptive Scaling:**
 ```bash
-java -classpath cloudsim-3.1-SNAPSHOT.jar:cloudsim-examples-3.1-SNAPSHOT.jar:lib/hazelcast-3.2.jar:cloud2sim-1.0-SNAPSHOT.jar pt.inesc_id.gsd.cloud2sim.applications.main.statics.Simulator
+# Master node
+./run_sim.sh pt.inesc_id.gsd.cloud2sim.applications.main.dynamics.ScalableSimulator
+
+# Worker nodes
+./run_sim.sh pt.inesc_id.gsd.cloud2sim.scale.ias.IntelligentAdaptiveScaler
+```
+
+**Map-Reduce Simulations:**
+```bash
+# Hazelcast
+./run_sim.sh pt.inesc_id.gsd.cloud2sim.mapreduce.hazelcast.HzMapReduceSimulator
+
+# Infinispan
+./run_sim.sh pt.inesc_id.gsd.cloud2sim.infinispan.Initiator
+./run_sim.sh pt.inesc_id.gsd.cloud2sim.mapreduce.infinispan.InfMapReduceSimulator
 ```
 
 ### Adaptive Scaling
@@ -33,52 +47,58 @@ java -classpath cloudsim-3.1-SNAPSHOT.jar:cloudsim-examples-3.1-SNAPSHOT.jar:lib
 Initiate the `ScalableSimulator` on the master node:
 
 ```bash
-java -classpath cloudsim-3.1-SNAPSHOT.jar:lib/hazelcast-3.2.jar:cloud2sim-1.0-SNAPSHOT.jar pt.inesc_id.gsd.cloud2sim.applications.main.dynamics.ScalableSimulator
+java $JAVA_OPTS -classpath "lib/*:." pt.inesc_id.gsd.cloud2sim.applications.main.dynamics.ScalableSimulator
 ```
 
 Initiate the `IntelligentAdaptiveScaler` on the worker nodes:
 
 ```bash
-java -classpath cloudsim-3.1-SNAPSHOT.jar:lib/hazelcast-3.2.jar:cloud2sim-1.0-SNAPSHOT.jar pt.inesc_id.gsd.cloud2sim.scale.ias.IntelligentAdaptiveScaler
+java $JAVA_OPTS -classpath "lib/*:." pt.inesc_id.gsd.cloud2sim.scale.ias.IntelligentAdaptiveScaler
 ```
 
-### Map-Reduce Simulations
+### Distributed Infinispan Simulation
 
-Workload files are located in `conf/mapreduce/`.
+Cloud2Sim leverages Infinispan's distributed data grid capabilities. You can run multiple instances of the Infinispan nodes to simulate a distributed environment.
+
+1. **Initiator**: Acts as a cluster node. It can be used to hold data or serve as a persistent member of the grid.
+   ```bash
+   ./run_sim.sh pt.inesc_id.gsd.cloud2sim.infinispan.Initiator
+   ```
+
+2. **Simulator**: Joins the Infinispan cluster formed by the Initiator(s) and triggers the MapReduce tasks across all available nodes.
+   ```bash
+   ./run_sim.sh pt.inesc_id.gsd.cloud2sim.mapreduce.infinispan.InfMapReduceSimulator
+   ```
+
+*Note: You can run one Initiator and one Simulator on the same machine, or distribute them across different machines by updating the JGroups configuration in `conf/jgroups-tcp-config.xml` with actual IP addresses.*
+
+### Map-Reduce Configuration
+
+Workload files and dataset configurations are managed in `conf/cloud2sim.properties`:
+
+*   `loadFolder`: Path to the input text files (e.g., `conf/mapreduce/load`).
+*   `mapReduceSize`: The number of lines to process per file.
+*   `isVerbose`: Set to `true` to see detailed word count results.
 
 #### Using Hazelcast
 
-Set the map-reduce workload size in `conf/cloud2sim.properties`:
+Hazelcast supports distributed execution using an Initiator/Simulator pattern. You can form a cluster by running one or more Initiator nodes.
 
-```properties
-mapReduceSize=10
-```
+1. **Initiator**: Starts a standalone Hazelcast node to join the cluster.
+   ```bash
+   ./run_sim.sh pt.inesc_id.gsd.cloud2sim.hazelcast.HzInitiator
+   ```
 
-Run the simulator:
+2. **Simulator**: Joins the Hazelcast cluster and executes the MapReduce simulation across all nodes.
+   ```bash
+   ./run_sim.sh pt.inesc_id.gsd.cloud2sim.mapreduce.hazelcast.HzMapReduceSimulator
+   ```
 
-```bash
-java -classpath cloudsim-3.1-SNAPSHOT.jar:lib/hazelcast-3.2.jar:cloud2sim-1.0-SNAPSHOT.jar pt.inesc_id.gsd.cloud2sim.mapreduce.hazelcast.HzMapReduceSimulator
-```
+### Java Compatibility
+Cloud2Sim is configured for **Java 11** and newer. The `run_sim.sh` script automatically applies the necessary `--add-opens` flags required for Hazelcast and Infinispan to work on modern JDKs (9, 11, 17, 21+).
 
 #### Using Infinispan
-
-Set the map-reduce workload size in `conf/infinispan.properties`:
-
-```properties
-mapReduceSize=10
-```
-
-Run the initiator:
-
-```bash
-java -classpath cloudsim-3.1-SNAPSHOT.jar:lib/*:cloud2sim-1.0-SNAPSHOT.jar pt.inesc_id.gsd.cloud2sim.infinispan.Initiator
-```
-
-Run the simulator:
-
-```bash
-java -classpath cloudsim-3.1-SNAPSHOT.jar:lib/*:cloud2sim-1.0-SNAPSHOT.jar pt.inesc_id.gsd.cloud2sim.mapreduce.infinispan.InfMapReduceSimulator
-```
+Follow the Initiator/Simulator pattern described above.
 
 ## Citing Cloud2Sim
 
